--- a/robotframework_dashboard/css/dark.css
+++ b/robotframework_dashboard/css/dark.css
@@ -1,5 +1,4 @@
 .modal-dialog {
-  background: var(--color-modal-bg);
   color: var(--color-text);
 }
 
